# File-Organizer

./: .gitignore  README.md  main.py  organizer.py  pyproject.toml
.github/workflows/: ci.yml
file_organizer/: cli.py  organizer.py
tests/: test_organizer.py
